# maker

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  tasks
cmake/: ffmpeg.cmake  makerlib.cmake  microui.cmake  requirements.cmake  sokol.cmake
src/: main.c  maker.c  maker.h  maker_decoder.c  maker_decoder.h  maker_internal.h  maker_mutex.c  maker_mutex.h  maker_play.c  maker_play.h  maker_play_debug.h  maker_player.c  maker_player.h  maker_thread.c  maker_thread.h  maker_util.c  maker_util.h  quad.glsl  quad.glsl.h
src/shaders/: quad.glsl  quad.glsl.h
tests/: CMakeLists.txt  decode.c  decode_video.c  maker_play_ext.h  test-hello.c  test_decode.c  test_decode_video.c  thread.c
